white gap fix attempt no 3

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ html{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 100%;
+    min-height: 100dvh;
     
 }
 body{
